--- a/src/view/login/Login.fxml
+++ b/src/view/login/Login.fxml
@@ -2,27 +2,46 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.String?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
+<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
    <children>
-      <VBox alignment="CENTER" prefHeight="400.0" prefWidth="319.0">
+      <JFXProgressBar fx:id="progress" focusTraversable="false" maxWidth="5000.0" prefWidth="600.0" visible="false" VBox.vgrow="ALWAYS">
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+         <styleClass>
+            <String fx:value="jfx-progress-bar" />
+            <String fx:value="custom-jfx-progress-bar" />
+         </styleClass></JFXProgressBar>
+      <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
          <children>
-            <JFXTextField fx:id="username" promptText="Username" />
-            <JFXPasswordField fx:id="password" promptText="Password">
-               <VBox.margin>
-                  <Insets top="10.0" />
-               </VBox.margin>
-            </JFXPasswordField>
-            <JFXButton buttonType="RAISED" onAction="#handleLoginAction" text="Login">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </JFXButton>
+            <VBox fx:id="vbox" alignment="CENTER_RIGHT" prefHeight="400.0" prefWidth="319.0">
+               <children>
+                  <JFXTextField fx:id="username" promptText="Username" text="admin" />
+                  <JFXPasswordField fx:id="password" promptText="Password" text="password">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </JFXPasswordField>
+                  <JFXButton buttonType="RAISED" onAction="#handleLoginAction" style="-fx-background-color: #673AB7;" text="Login" textFill="WHITE">
+                     <VBox.margin>
+                        <Insets right="8.0" top="20.0" />
+                     </VBox.margin>
+                  </JFXButton>
+               </children>
+            </VBox>
          </children>
-      </VBox>
+      </HBox>
    </children>
-</HBox>
+   <stylesheets>
+      <URL value="@../../resources/css/jfoenix-components.css" />
+      <URL value="@../../resources/css/jfoenix-main-demo.css" />
+   </stylesheets>
+</VBox>
